# gienek

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: actor.hpp  actor_actions.hpp  adjacent_sector.hpp  cmd_types.hpp  command_queue.hpp  decoder.hpp  display_config.hpp  doom_controller.hpp  doommap.hpp  event_loop.hpp  handler.hpp  handler_clear.hpp  handler_line.hpp  handler_map_received.hpp  handler_player_angle.hpp  handler_quit.hpp  handler_result.hpp  handler_sector.hpp  handler_sector_ceiling_height_change.hpp  handler_sector_floor_height_change.hpp  handler_subsector.hpp  handler_thing.hpp  handler_thing_remove.hpp  handler_thing_update.hpp  handler_unknown.hpp  handler_vertex.hpp  keyboard.hpp  line.hpp  mouse.hpp  painter.hpp  path.hpp  player.hpp  player_states.hpp  player_task.hpp  point.hpp  route_component.hpp  scaler.hpp  sector.hpp  seg.hpp  seg_triangle.hpp  (+8 more)
src/: actor.cc  command_queue.cc  decoder.cc  doom_controller.cc  doommap.cc  event_loop.cc  handler.cc  handler_clear.cc  handler_line.cc  handler_map_received.cc  handler_player_angle.cc  handler_quit.cc  handler_sector.cc  handler_sector_ceiling_height_change.cc  handler_sector_floor_height_change.cc  handler_subsector.cc  handler_thing.cc  handler_thing_remove.cc  handler_thing_update.cc  handler_unknown.cc  handler_vertex.cc  keyboard.cc  main.cc  painter.cc  path.cc  player.cc  player_task.cc  point.cc  route_component.cc  scaler.cc  sector.cc  seg.cc  seg_triangle.cc  socket_reader.cc  subsector.cc  thing.cc  toolbox.cc  treenode.cc  user_interactions.cc
test_maps/: MAP01.wad  MAP02.wad  MAP03.wad  MAP04.wad  MAP05.wad  MAP06.wad  MAP07.wad
